makes Stopwatch display running stopwatch even when its body is collapsed

--- a/projects/Many_mini-tools/assets/css/effects.css
+++ b/projects/Many_mini-tools/assets/css/effects.css
@@ -1,5 +1,5 @@
 /* STOPWATCH EFFECTS */
-#stopwatch-display {
+#STW-stopwatch-display {
 	font-family: 'Consolas', monospace;
 	font-size: 48px; /* Adjust the size as needed */
 	text-align: center;
